Fix cutoff input areas in library edit modal (#620)

--- a/app/styles/layout/_modals.scss
+++ b/app/styles/layout/_modals.scss
@@ -691,4 +691,9 @@
       }
     }
   }
+  .input-group {
+    .form-control {
+      min-width: 50px;
+    }
+  }
 }
